feat: add @medusajs/auth-google dependency and update related packages
- Added @medusajs/auth-google as a dependency in package.json.
- Updated yarn.lock to include new dependency and its transitive dependencies.
- Upgraded axios to version 1.11.0 and form-data to version 4.0.4.
- Updated brace-expansion to versions 1.1.12 and 2.0.2.
- Updated chardet to version 2.1.0.
- Updated compression to version 1.8.1 and express-session to version 1.18.2.
- Updated inquirer to version 8.2.7 and added @inquirer/external-editor as a dependency.
- Updated morgan to version 1.10.1 and on-headers to version 1.1.0.
- Updated vite to version 5.4.19.

--- a/circuitry-ecommerce/package.json
+++ b/circuitry-ecommerce/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.9.0",
+    "@medusajs/auth-google": "^2.9.0",
     "@medusajs/cli": "2.9.0",
     "@medusajs/framework": "2.9.0",
     "@medusajs/medusa": "2.9.0",
