--- a/circuitry-ecommerce-storefront/package.json
+++ b/circuitry-ecommerce-storefront/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@medusajs/auth-google": "^2.9.0",
     "@medusajs/js-sdk": "latest",
     "@medusajs/ui": "latest",
     "@radix-ui/react-accordion": "^1.2.1",
