--- a/circuitry-ecommerce/package.json
+++ b/circuitry-ecommerce/package.json
@@ -31,6 +31,7 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "algoliasearch": "^5.37.0",
     "awilix": "^8.0.1",
     "pg": "^8.13.0"
   },
