--- a/circuitry-ecommerce-storefront/package.json
+++ b/circuitry-ecommerce-storefront/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.54.2",
+    "algoliasearch": "^5.37.0",
     "lodash": "^4.17.21",
     "next": "^15.3.1",
     "pg": "^8.11.3",
@@ -30,6 +31,7 @@
     "react-country-flag": "^3.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.5.0",
+    "react-instantsearch": "^7.16.2",
     "react-jwt": "^1.3.0",
     "server-only": "^0.0.1",
     "tailwindcss-radix": "^2.8.0",
